--- a/10thApril2020/Untitled.ipynb
+++ b/10thApril2020/Untitled.ipynb
@@ -2,46 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.externals import joblib"
+    "from sklearn.externals import joblibblib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = joblib.load('mymarksmodel.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z = model.predict([[23],[34]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "230.00000000000003\n"
+      "heloo 5 hrr\n"
      ]
     }
    ],
    "source": [
-    "print(z[0])"
+    "x = 5\n",
+    "print(\"heloo\", x , \"hrr\")"
    ]
   },
   {
